# quic-poker

./: Cargo.toml  Dockerfile  README.md  compose.yaml  docker_compose.yml
.github/workflows/: ci.yml  clippy.yml
client/: Cargo.toml
client/src/: main.rs
net/: Cargo.toml
net/src/: cert.rs  error.rs  lib.rs
poker-core/: Cargo.toml
poker-core/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: constants.rs  main.rs
