[workspace]
resolver = "3"
members = ["client", "net", "poker-core", "protocol", "server"]

[workspace.dependencies]
tokio = { version = "1", default-features = false }
quinn = "0.11"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
