[package]
name = "client"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
poker-core = { path = "../poker-core" }
protocol = { path = "../protocol" }
net = { path = "../net" }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
