[package]
name = "net"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
quinn = { workspace = true }
rustls = "0.23"
webpki-roots = "1"
rustls-pemfile = "2.2"
rcgen = { version = "0.14", optional = true }
protocol = { path = "../protocol" }

[features]
dev = ["dep:rcgen"]
