[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
poker-core = { path = "../poker-core" }
protocol = { path = "../protocol" }
net = { path = "../net" }

tokio = { workspace = true }
quinn = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
dev = ["net/dev"]
