[package]
name = "server"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
poker-core = { path = "../poker-core" }
protocol = { path = "../protocol" }
net = { path = "../net" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
quinn = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
dev = ["net/dev"]
